Added working questions and changed styling

--- a/index.html
+++ b/index.html
@@ -27,82 +27,85 @@
         <!-- Question 1 -->
         <div class="row">
             <div class="col">
-                <h4>My name is _________</h4><br>
+                <h4>Hi, My name is _________</h4><br>
             <!-- Answer 1 -->
                 <form>
-                    <input type="radio" name="question1" value="correct"> Logan Moss
+                    <input type="radio" name="question1" value="incorrect"> Logan Moss
                     <input type="radio" name="question1" value="incorrect"> John Oswald
                     <input type="radio" name="question1" value="incorrect"> Harry Potter
-                    <input type="radio" name="question1" value="incorrect"> None of These
+                    <input type="radio" name="question1" value="correct"> Slim Shady
                 </form>
             </div>
         </div>
         <br><br>
         <div class="row">
             <div class="col">
-                <h4>My name is NOT _______</h4><br>
+                <h4>John has 3 apples, he eats an apple for lunch and gives another two Sally. What's the square root for the circumference of the sun?</h4><br>
             <!-- Answer 2 -->
                 <form>
-                    <input type="radio" name="question2" value="correct"> Logan Moss
-                    <input type="radio" name="question2" value="incorrect"> John Oswald
-                    <input type="radio" name="question2" value="incorrect"> Harry Potter
-                    <input type="radio" name="question2" value="incorrect"> None of These
+                    <input type="radio" name="question2" value="incorrect"> 1.849.50 mi
+                    <input type="radio" name="question2" value="correct"> 1.649.54 mi
+                    <input type="radio" name="question2" value="incorrect"> 1.359.58 mi
+                    <input type="radio" name="question2" value="incorrect"> 2.321.52 mi
                 </form>
             </div>
         </div>
         <br><br>
         <div class="row">
             <div class="col">
-                <h4>My name is NOT _______</h4><br>
-            <!-- Answer 2 -->
+                <h4>You're third in a race. What place are you in once you pass the person in 2nd?</h4><br>
+            <!-- Answer 3 -->
                 <form>
-                    <input type="radio" name="question3" value="correct"> Logan Moss
-                    <input type="radio" name="question3" value="incorrect"> John Oswald
-                    <input type="radio" name="question3" value="incorrect"> Harry Potter
-                    <input type="radio" name="question3" value="incorrect"> None of These
+                    <input type="radio" name="question3" value="incorrect"> 1st
+                    <input type="radio" name="question3" value="correct"> 2nd
+                    <input type="radio" name="question3" value="incorrect"> 3rd
+                    <input type="radio" name="question3" value="incorrect"> I don't do cardio
                 </form>
             </div>
         </div>
         <br><br>
         <div class="row">
             <div class="col">
-                <h4>My name is NOT _______</h4><br>
-            <!-- Answer 2 -->
+                <h4>How many months have 28 days?</h4><br>
+            <!-- Answer 4 -->
                 <form>
-                    <input type="radio" name="question4" value="correct"> Logan Moss
-                    <input type="radio" name="question4" value="incorrect"> John Oswald
-                    <input type="radio" name="question4" value="incorrect"> Harry Potter
-                    <input type="radio" name="question4" value="incorrect"> None of These
+                    <input type="radio" name="question4" value="incorrect"> 1
+                    <input type="radio" name="question4" value="incorrect"> 2
+                    <input type="radio" name="question4" value="incorrect"> Depends on if there is a leap year or not
+                    <input type="radio" name="question4" value="correct"> All of them
                 </form>
             </div>
         </div>
         <br><br>
         <div class="row">
             <div class="col">
-                <h4>My name is NOT _______</h4><br>
-            <!-- Answer 2 -->
+                <h4>Divide thirty by half and add ten</h4><br>
+            <!-- Answer 5 -->
                 <form>
-                    <input type="radio" name="question5" value="correct"> Logan Moss
-                    <input type="radio" name="question5" value="incorrect"> John Oswald
-                    <input type="radio" name="question5" value="incorrect"> Harry Potter
-                    <input type="radio" name="question5" value="incorrect"> None of These
+                    <input type="radio" name="question5" value="incorrect"> 25
+                    <input type="radio" name="question5" value="incorrect"> 40.5
+                    <input type="radio" name="question5" value="correct"> 70
+                    <input type="radio" name="question5" value="incorrect"> None of these
                 </form>
             </div>
         </div>
         <br><br>
         <div class="row">
             <div class="col">
-                <h4>My name is NOT _______</h4><br>
-            <!-- Answer 2 -->
+                <h4>John buys 70 liters of coca-cola and drinks half of each bottle, how many gallons of soda does John have?</h4><br>
+            <!-- Answer 6 -->
                 <form>
-                    <input type="radio" name="question6" value="correct"> Logan Moss
-                    <input type="radio" name="question6" value="incorrect"> John Oswald
-                    <input type="radio" name="question6" value="incorrect"> Harry Potter
-                    <input type="radio" name="question6" value="incorrect"> None of These
+                    <input type="radio" name="question6" value="incorrect"> 70
+                    <input type="radio" name="question6" value="incorrect"> 35
+                    <input type="radio" name="question6" value="incorrect"> It depends on how fast John drinks
+                    <input type="radio" name="question6" value="correct"> Diabetes, John has diabetes.
                 </form>
             </div>
         </div>
     </div>
-    <button id="submitbutton">Submit</button>
+    <section>
+        <button id="submitbutton">Submit</button>
+    </section>
+
 </body>
 </html>
