Added working files, can retouch styles a little bit

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="row">
             <!-- Quiz Title -->
             <div class="col">
-                <h1>TOTALLY TRIVIAL TRIVIA!</h1>
+                <h1>TOTALLY RAPIDLY RAPID TRIVIAL TRIVIA!</h1>
             </div>
         </div>
         <div class="row">
