Added working styles finalizing product

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div class="row">
             <div class="col">
-                <p id="timer">Time Remaining:</p>
+                <p id="timer"><b>Time Remaining:</b></p>
             </div>
         </div>
         <!-- Question 1 -->
